# fates-edge-apps

./: .gitignore  ADVISORY.md  API.md  LICENSE  LICENSE.md  MANIFEST.in  README.md  output.txt  package-lock.json  package.json  requirements.txt
.github/workflows/: build-and-release.yml  build-apps-and-packages.yml  create-release.yml  deploy-apps.yml  deploy-render.yml  deploy-socket-server-to-render.yml  deploy-socket-server.yml  deploy-web-client.yml  docker-publish.yml
misc/: acasia.json  pack.json  the_traveler.json  wiki.json
tools/: add-copyright-to-json.py  npm-install-all.sh  sync-package-json.py
ttrpg/misc/: the_traveler.json
ttrpg/utilities/javascript/: .gitignore  README.md
ttrpg/utilities/python/fates-edge-python-client/: pyproject.toml  setup.py
utilities/: LICENSE.txt
utilities/fates-edge-discord-bot/: .env.example  package-lock.json  package.json
utilities/fates-edge-discord-bot/commands/: admin.js  character.js  dice.js  vtt.js
utilities/fates-edge-discord-bot/events/: interactionCreate.js
utilities/fates-edge-discord-bot/utils/: logger.js
utilities/fates-edge-roll20/: README.md  module.json
utilities/fates-edge-roll20/api/: fates-edge-api.js
utilities/fates-edge-roll20/character-sheet/: fates-edge.html
utilities/foundry_fates-edge-bridge/: module.json
utilities/foundry_fates-edge-bridge/lang/: en.json
utilities/foundry_fates-edge-bridge/scripts/: bridge.js  main.js
utilities/javascript/: README.md  build_script.py  fe_toolkit.md
utilities/vtt_mods_bots/: avrae_module.txt
utilities/vtt_mods_bots/ai-gm-bot/: rules.txt  (+3 more)
(+360 files in other folders)
